# asp3_esp_idf

./: .gitmodules  CLAUDE.md  README.md
asp3/: asp3_esp_idf.cmake
docs/: ble-c3-smp-death-plan.md  ble-c5c6-plan.md  ble-c5c6.md  blob-inventory.md  blob-unify-v554-review.md  blob-unify-v554.md  bt-c3-resume-plan.md  bt-emi-2board-request.md  bt-shim.md  c3-ble-connect-plan.md  c5-bringup.md  c5-clic-exit-fix-review.md  c5-hal-v8-unification-memo.md  c5-port-design.md  c5-tone-adc-plan.md  c5-toolchain.md  c5-wifi-v9-0x3001-plan.md  c5c6-lessons-for-s31.md  config-audit.md  dedup-tier2-plan.md  esp32s3-integration-brief.md  hal-integration.md  hal-nuttx-version-map.md  hal-vs-espidf-decision.md  load-test-c3c5c6.md  onboarding.md  review-codex-fable-2026-07-18.md  s3-adv-storm-crosscheck-for-c3.md  s3-bt-intr-source-overwrite-fix-for-c3.md  s3-idle-freeze-findings-for-c3.md  s3-throughput-findings-for-c6.md  s3-timer-findings-for-c6.md  tcpip-integration.md  wifi-blob-generation-todo.md  wifi-scan-c3-crash.md  wifi-shim-c6.md  wifi-shim.md
tmp/: .gitignore  c3_ab_trial.py  c3ble.sh  c3ble_esp15.sh  c5_cold_cycle.sh  c5_cold_passive_capture.py  c5_pmu_predict.py  c5_review_jisshi21_plan.md  c5_review_v9_0x3001.md  c5ble.sh  c5ble_esp15.sh  c5wifi.sh  c5wifi_esp15.sh  c6_review_r1_semantics.md  c6_review_r2_memory_init.md  c6_session_handoff.md  c6_step0_findings.md  c6_wifi_arduino_handoff_strategy.md  c6ble.sh  c6ble_esp15.sh  c6hw.sh  clean_boot_capture.py  codex_c5_round1_output.txt  codex_c5_round1_prompt.md  (+24 more)
tmp/c6_handoff_source/main/: CMakeLists.txt  main.c
(+229 files in other folders)
